# prepgenius

./: -  .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  opencode.json
.ai/: README.md
backend/: .coverage  .dockerignore  Dockerfile  README.md  _appearance_audit.py  conftest.py  manage.py  pyproject.toml  reproduce_bug4.py  requirements.txt  schema.yml
backend/accounts/: admin.py  apps.py  authentication.py  cookie_utils.py  exceptions.py  permissions.py  schema_extensions.py  throttles.py
backend/accounts/api/: ops_serializers.py  ops_urls.py  ops_views.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_permission_role_emailverificationtoken_and_more.py  0003_remove_user_accounts_us_target__5cf620_idx_and_more.py  0004_remove_userrole_uq_user_role_institution_and_more.py  0005_alter_user_managers.py  0006_user_failed_login_attempts_user_locked_until.py  0007_backfill_student_role.py
backend/ai/: admin.py  apps.py  enums.py  exceptions.py
backend/analytics/: admin.py
backend/attempts/: admin.py  apps.py  exceptions.py
backend/cms/: admin.py
backend/common/: permissions.py
backend/config/: api_router.py  asgi.py  celery.py  urls.py  wsgi.py
backend/content_review/: admin.py  apps.py  exceptions.py
backend/credits/: admin.py  apps.py  exceptions.py
backend/exams/: admin.py  admin.py,cover  apps.py,cover  exceptions.py  exceptions.py,cover
backend/institutions/: apps.py
backend/questions/: admin.py  apps.py  exceptions.py
(+936 files in other folders)
